tests/fixtures/invalid/str_bitxor_bool.py
# Cannot bitwise XOR Str and Bool
x: str = "hello" ^ True
